; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_mempool.c_mempool_free_tile.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_mempool.c_mempool_free_tile.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mempool = type { i8* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mempool_free_tile(%struct.mempool* %0, i8* %1) #0 {
  %3 = alloca %struct.mempool*, align 8
  %4 = alloca i8*, align 8
  store %struct.mempool* %0, %struct.mempool** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load %struct.mempool*, %struct.mempool** %3, align 8
  %6 = getelementptr inbounds %struct.mempool, %struct.mempool* %5, i32 0, i32 0
  %7 = load i8*, i8** %6, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to i8**
  store i8* %7, i8** %9, align 8
  %10 = load i8*, i8** %4, align 8
  %11 = load %struct.mempool*, %struct.mempool** %3, align 8
  %12 = getelementptr inbounds %struct.mempool, %struct.mempool* %11, i32 0, i32 0
  store i8* %10, i8** %12, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
